--- a/3D.html
+++ b/3D.html
@@ -257,6 +257,20 @@ That rhetoric has been quite present in recent VR culture, but there are no guar
 
 		<p>Zyda, M. (2005). <a href="https://doi.org/10.1109/MC.2005.297">From visual simulation to virtual reality to games</a>. Computer, 38(9), 25-32.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 
 </html>
