--- a/accessibility.html
+++ b/accessibility.html
@@ -206,6 +206,19 @@
 
 		<p>Jacob O. Wobbrock, Shaun K. Kane, Krzysztof Z. Gajos, Susumu Harada, and Jon Froehlich. 2011. <a href="http://dx.doi.org/10.1145/1952383.1952384">Ability-Based Design: Concept, Principles and Examples</a>. ACM Trans. Access. Comput. 3, 3, Article 9 (April 2011), 27 pages.</p>
 		
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
 
 	</body>
 	
