--- a/architecture.html
+++ b/architecture.html
@@ -186,7 +186,7 @@
 		<p>
 			Other research has looked beyond traditional WIMP interfaces, creating new architectures to support new media.
 			The DART toolkit, for example, invented several abstractions for augmented reality applications (<a href="https://doi.org/10.1145/2642918.2647369">Gandy and MacIntyre 2014</a>).
-			Researchers contributed architectures for digital ink applications (<a href="http://dx.doi.org/10.1145/354401.354412">Hong and Landay 2000</a>), zoomable interfaces (<a href="http://dx.doi.org/10.1145/354401.354754">Bederson et al. 2000</a>), peripheral displays that monitor user attention (<a href="http://dx.doi.org/10.1145/1029632.1029676">Matthews et al. 2004</a>), data visualizations (<a href="https://doi.org/10.1109/TVCG.2009.174">Bostock and Heer 2009</a>), tangible user interfaces made of physical components (<a href="http://dx.doi.org/10.1145/502348.502388">Greenburg and Fitchett 2011</a>, <a href="http://dx.doi.org/10.1145/985692.985743">Klemmer et al. 2014</a>), interfaces based on proximity between people and objects (<a href="https://doi.org/10.1145/2047196.2047238">Marquardt et al. 2011</a>), and multi-touch gestures (<a href="https://doi.org/10.1145/2380116.2380176">Kin et al. 2012</a>).
+			Researchers contributed architectures for digital ink applications (<a href="http://dx.doi.org/10.1145/354401.354412">Hong and Landay 2000</a>), zoomable interfaces (<a href="http://dx.doi.org/10.1145/354401.354754">Bederson et al. 2000</a>), peripheral displays that monitor user attention (<a href="http://dx.doi.org/10.1145/1029632.1029676">Matthews et al. 2004</a>), data visualizations (<a href="https://doi.org/10.1109/TVCG.2009.174">Bostock and Heer 2009</a>), tangible user interfaces made of physical components (<a href="http://dx.doi.org/10.1145/502348.502388">Greenburg and Fitchett 2011</a>, <a href="http://dx.doi.org/10.1145/985692.985743">Klemmer et al. 2004</a>), interfaces based on proximity between people and objects (<a href="https://doi.org/10.1145/2047196.2047238">Marquardt et al. 2011</a>), and multi-touch gestures (<a href="https://doi.org/10.1145/2380116.2380176">Kin et al. 2012</a>).
 			Another parallel sequence of work explored the general problem of handling events that are uncertain or continuous, investigating novel architectures and error handling strategies to manage uncertainty (<a href="https://doi.org/10.1145/142621.142650">Hudson and Newell 1992</a>, <a href="http://dx.doi.org/10.1145/354401.354407">Mankoff et al. 2000</a>, <a href="https://doi.org/10.1145/142621.142650">Hudson and Newell 1992</a>, <a href="https://doi.org/10.1145/1866029.1866039">Schwarz et al. 2010</a>).
 			Each one of these toolkits contributed new types of events, event handling, event propagation, synthetic event processing, and model-view-controller architectures tailored to these inputs.
 		</p>
@@ -292,6 +292,19 @@
 
 		<p>Amanda Swearngin, Andrew J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
 
 	</body>
 	
