--- a/declarative.html
+++ b/declarative.html
@@ -145,6 +145,20 @@
 
 		<p id="yeh">Tom Yeh, Tsung-Hsiang Chang, and Robert C. Miller. 2009. <a href="https://doi.org/10.1145/1622176.1622213">Sikuli: using GUI screenshots for search and automation</a>. In Proceedings of the 22nd annual ACM symposium on User interface software and technology (UIST '09). ACM, New York, NY, USA, 183-192.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 
 </html>
