--- a/help.html
+++ b/help.html
@@ -287,6 +287,20 @@
 
 		<p>Sellen, A., & Nicol, A. (1995). <a href="https://doi.org/10.1016/B978-0-08-051574-8.50073-X">Building User-centered on-line help</a>. In Human-computer interaction.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 
 </html>
