--- a/history.html
+++ b/history.html
@@ -177,6 +177,20 @@
 		
 		<p>Mark Weiser (1991). <a href="https://doi.org/10.1145/329124.329126">The Computer for the 21st Century</a>. Scientific American 265, 3 (September 1991), 94-104.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 	
 </html>
