--- a/interactive.html
+++ b/interactive.html
@@ -214,6 +214,20 @@
 		
 		<p href="zhao">Shengdong Zhao and Ravin Balakrishnan. 2004. <a href="http://dx.doi.org/10.1145/1029632.1029639">Simple vs. compound mark hierarchical marking menus</a>. In Proceedings of the 17th annual ACM symposium on User interface software and technology (UIST '04). ACM, New York, NY, USA, 33-42.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 	
 </html>
