--- a/ip.html
+++ b/ip.html
@@ -325,6 +325,19 @@
 
 		<p>Pamela Samuelson. 2017. <a href="https://doi.org/10.1145/3041043">Supreme Court on design patent damages in Samsung v. Apple</a>. Communications of the ACM 60, 3 (February 2017), 26-28.</p>
 
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
 
 	</body>
 
