--- a/text-entry.html
+++ b/text-entry.html
@@ -285,6 +285,20 @@
 		
 		<p>Jacob O. Wobbrock, Brad A. Myers, and John A. Kembel. 2003. <a href="https://doi.org/10.1145/964696.964703">EdgeWrite: a stylus-based text entry method designed for high accuracy and stability of motion</a>. In Proceedings of the 16th annual ACM symposium on User interface software and technology (UIST '03). ACM, New York, NY, USA, 61-70.</p>
 		
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 	
 </html>
