--- a/theory.html
+++ b/theory.html
@@ -241,6 +241,20 @@
 				
 		<p id="rogers">Rogers, Y. (2012). <a href="https://doi.org/10.2200/S00418ED1V01Y201205HCI014">HCI theory: classical, modern, and contemporary</a>. Synthesis Lectures on Human-Centered Informatics, 5(2), 1-129.</p>
 		
+		<script type="text/javascript">
+		
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-10917999-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
+
 	</body>
 	
 </html>
