Fixed #62, updating link to a new Sketchpad video.

--- a/history.html
+++ b/history.html
@@ -83,13 +83,13 @@
 		</p>
 
 		<p class="embed-responsive embed-responsive-16by9">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/USyoT_Ha_bA" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/6orsmFndx_o" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</p>
 		
 		<p>
 			One person that Bush and Licklider's ideas influenced was MIT computer scientist <a href="https://en.wikipedia.org/wiki/Ivan_Sutherland">Ivan Sutherland</a>.
 			He followed this vision of human augmentation by exploring interactive sketching on computers, working on a system called Sketchpad for his dissertation (<a href="#sutherland">Sutherland 1963</a>).
-			Sketchpad allowed drawing of segments, arcs, and constraints between shapes.
+			Sketchpad, seen in the video above, allowed drawing of segments, arcs, and constraints between shapes.
 			Shapes could be transformed, resized, repositioned, and clipped, and a notion of windowing allowed zooming and panning. 
 			The entire interactive experience was stylus-based and the implementation paradigm was object-based.
 			This was the first system to ever demonstrate an interactive dialog with a computer, rather than a "batch processing" programming-based interaction.
