Added link to the Apollo guidance computer video.

--- a/history.html
+++ b/history.html
@@ -177,6 +177,8 @@
 		
 		<p>Mark Weiser (1991). <a href="https://doi.org/10.1145/329124.329126">The Computer for the 21st Century</a>. Scientific American 265, 3 (September 1991), 94-104.</p>
 
+		<p><a href="https://www.youtube.com/watch?v=YIBhPsyYCiM">The Apollo Guidance Computer</a></p>
+		
 		<script type="text/javascript">
 		
 			var _gaq = _gaq || [];
