Fixed #49, adding link to PowerPoint history.

--- a/history.html
+++ b/history.html
@@ -138,6 +138,11 @@
 		</p>
 
 		<p>
+			As the Macintosh platform expanded, it drew many innovators, including many Silicon Valley entreprenuers with ideas for how to make personal computers even more powerful.
+			This included ideas like presentation software such as <a href="https://spectrum.ieee.org/tech-history/cyberspace/the-improbable-origins-of-powerpoint">PowerPoint</a>, which grew out of the same Xerox PARC vision of what-you-see-is-what-you-get text and graphics manipulation.
+		</p>
+		
+		<p>
 			Since the release of the Macintosh, companies like Apple, Microsoft, and now Google, have driven much of the engineering of user interfaces, deviating little from the original visions inspired by Bush, Licklider, Sutherland, Engelbart, and Kay, but continuing to harvest basic research for new paradigms of interaction, including the rapid proliferation of capacitive touch screens in the early 2000's in smartphones.
 			But research continued.
 			Around the same time as the release of the Macintosh, many computer scientists who had worked in computer graphics (a field started by Sutherland), spun off a new conference in 1988, the <a href="https://uist.acm.org">ACM Symposium on User Interface Software and Technology</a>.
