Fixed #16, adding more metaphor to human behavior.

--- a/theory.html
+++ b/theory.html
@@ -55,9 +55,11 @@
 			Let's begin with what user interfaces <em>are</em>.
 			<em>User interfaces are software and/or hardware that bridge the world of human action and computer action</em>.
 			The first world is the natural world of matter, motion, sensing, action, reaction, and cognition, in which people (and other living things) build models of the things around them in order to make predictions about the effects of their actions.
+			It is a world of stimulus, response, and adaptation.
 			For example, when an infant is learning to walk, they're constantly engaged in perceiving the world, taking a step, and experiencing things like gravity and pain, all of which refine a model of locomotion that prevents pain and helps achieve other objectives. 
 			Our human ability to model the world and then reshape the world around us using those models is what makes us so adaptive to environmental change.
 			It's the learning we do about the world that allows us to survive and thrive in it.
+			Computers, and the interfaces we use to operate them, are one of the things that humans adapt to.
 		</p>
 		
 		<p>
