Fixed #17, adding note about personalization.

--- a/theory.html
+++ b/theory.html
@@ -156,6 +156,7 @@
 			Want to make it easy to learn how to tell a computer add something to your cart on a website?
 			Use a button labeled "Add to cart," which most people will have already learned from using other e-commerce sites.
 			Or, leverage natural language, allowing people to say, "Alexa, order me more tissues."
+			Alternatively, interfaces might even try to anticipate what people want to do, personalizing what's available, and in doing so, miniizing how much a person has to learn.
 			From a design perspective, there's nothing inherently wrong with learning, it's just a cost that a designer may or may not want to impose on a new user.
 			(Perhaps learning a new interface affords new power not possible with old conventions, and so the cost is justified).
 		</p>
