Fixed #18; fixed #21: Added signifiers.

--- a/theory.html
+++ b/theory.html
@@ -100,33 +100,33 @@
 
 		<p>
 			What is it that people need to learn to take action on an interface?
-			Norman (and later <a href="#gaver">Gaver 1991</a>, <a href="#hartson">Hartson 2003</a>), argued that what we're really learning is <strong>affordances</strong>.
-			Hartson breaks down affordances into four distinct types:
+			Norman (and later <a href="#gaver">Gaver 1991</a>, <a href="#hartson">Hartson 2003</a>, and <a href="norman">Norman 2013</a> again), argued that what we're really learning is <strong>affordances</strong>.
+			An <strong>affordance</strong> is a property of what can be done to an interface in order to produce some effect.
+			For example, a physical computer mouse can be clicked, which allows information to be communicated to a computer.
+			A digital personal assistant like Amazon's Alexa can be invoked by saying "Alexa".
+			These are affordances for what an object is capable of.
 		</p>
 		
-		<ul>
-			<li>
-				<strong>Cognitive affordances</strong> are aspects of a user interface that aid, support, facilitate, or enable <em>thinking</em> about what potential for action a user interface is exposing.
-				A simple example would be a label on a button in a user interface that says "Add to cart": it conveys what action the button will take and invokes a metaphor of the implications of that action.
-			</li>
-			<li>
-				<strong>Physical affordances</strong> are aspects of a user interface that aid, support, facilitate, or enable physically doing something to a computer.
-				For example, a physical button on a mouse is a physical affordance.
-				When pressed, it transmits input to a computer.
-				Nothing about a physical affordance guarantees anything useful will happen: the affordance is just the conduit for communication with a computer, not any guarantee of utility.
-			</li>
-			<li>
-				<strong>Functional affordances</strong> are aspects of a user interface that actually respond to input to effect some useful outcome on the world.
-				For example, clicking a physical mouse button (physical affordance) within the boundaries of a virtual button (cognitive affordance) will add the item to your cart (functional affordance).
-			</li>
-			<li>
-				<strong>Sensory affordances</strong> are aspects of both cognitive and physical affordances that aid, support, facilitate, or enable the user in sensing the presence of cognitive and physical affordances.
-				For example, if a button were labeled "Add to cart" but both the button and the text were colored white, or were in a tiny font, or did not look different from other text in a user interface, there would be no sensory affordance to indicate a cognitive affordance for action.
-			</li>
-		</ul>
+		<p>
+			How can a person know what affordances an interface has? That's where the concept of a <strong>signifier</strong> becomes important.
+			Signifiers are any sensory or cognitive indicator of the presence of an affordance.
+			Consider, for example, how you know that a computer mouse can be clicked.
+			It's physical shape might evoke the industrial design of a button.
+			It might have little tangible surfaces that entreat you to push your finger on them.
+			A mouse could even have visual sensory signifiers, like a slowly changing colored surface that attempts to say, "I'm interactive, try touching me."
+			These are mostly sensory indicators of an affordance.
+			Personal digital assistants like "Alexa", in contrast, lack most of these signifiers.
+			What about an Amazon Echo says, "You can say Alexa and speak a command?"
+			In this case, Amazon relies on tutorials, stickers, and even television commercials to signify this affordance.
+		</p>
 		
 		<p>
-			Combining the concepts of gulf of execution and affordance, we can see that part of the challenge of designing a user interface is creating one in which all affordances are discoverable, comprehensible, and ultimately learnable.
+			While both of these examples involve hardware, the same concepts of affordance and signifier apply to software too.
+			Buttons in a graphical user interface have an affordance: if you click within their rectangular boundary, the computer will execute a command.
+			If you have sight, you know a button is clickable because long ago you learned that buttons have particular visual properties such as a rectangular shape and a label.
+			If you are blind, you might known a button is clickable because your screen reader announces that something is a "button" and reads its label.
+			All of this requires you knowing that interfaces have affordances such as buttons that are signified by a particular visual motif.
+			Therefore, a central challenge of designing a user interface is deciding what affordances an interface will have and how to signify that they exist.
 		</p>
 		
 		<p>
