Fixed #61, #60, #59, adding algorithm fairness.

--- a/mediation.html
+++ b/mediation.html
@@ -76,12 +76,17 @@
 		</p>
 		
 		<p>
-			How is this mediation? 
+			How is this mediation?
 			Well, the most direct way to access computation would be to write these programs in a computer's assembly language and then execute them.
 			That's what people did in the 1960's before there were graphical user interfaces, but even those were mediated by punchcards, levers, and other mechanical controls.
 			Our more modern interfaces are better because we don't have to learn as much to communicate to a computer what computation we want.
 			But, we still have to learn interfaces that mediate computation: <strong>we're learning APIs and how to program with them</strong>.
 		</p>
+		
+		<p>
+			Of course, as this distance between what we want a computer to do and how it does it grows, so does fear about how much trust to put in computers to compute fairly.
+			A rapidly growing body of research is considering what it means for algorithms to be fair, how people perceive fairness, and how explainable algorithms are (<a href="#abdul">Abdul et al. 2018</a>, <a href="#rader">Rader et al. 2018</a>, <a href="#woodruff">Woodruff et al. 2018</a>).
+			This research will greatly impact how interfaces communicate what algorithms are doing and why.
 
 		<h2>Mediating information</h2>
 
@@ -163,18 +168,24 @@
 	
 		<h2>Further reading</h2>
 		
+		<p id="abdul">Abdul, A., Vermeulen, J., Wang, D., Lim, B.Y., and Kankanhalli, M. (2018). <a href="https://doi.org/10.1145/3173574.3174156">Trends and trajectories for explainable, accountable, and intelligible systems: an HCI research agenda</a>. ACM Conference on Human Factors in Computing Systems (CHI).</p>
+		
 		<p id="cho">Cho, D., & Kwon, K. H. (2015). The impacts of identity verification and disclosure of social cues on flaming in online user comments. Computers in Human Behavior, 51, 363-372.</p>
 
 		<p id="erickson">Erickson, T., & Kellogg, W. A. (2000). Social translucence: an approach to designing systems that support social processes. ACM transactions on computer-human interaction (TOCHI), 7(1), 59-83.</p>
 		
 		<p id="fussel">Fussell, S. R., & Setlock, L. D. (2014). Computer-mediated communication. Handbook of Language and Social Psychology. Oxford University Press, Oxford, UK, 471-490.</p>
 		        
-        <p id="mcluhan">McLuhan, M. (1994). Understanding media: The extensions of man. MIT press.</p>
+	        <p id="mcluhan">McLuhan, M. (1994). Understanding media: The extensions of man. MIT press.</p>
 
 		<p id="olson">Olson, G. M., & Olson, J. S. (2000). Distance matters. Human-computer interaction, 15(2), 139-178.</p>
+
+		<p id="rader">Rader, E., Cotter, K., and Cho, J (2018). <a href="https://doi.org/10.1145/3173574.3173677">Explanations as mechanisms for supporting algorithmic transparency</a>. ACM Conference on Human Factors in Computing Systems (CHI).</p>
 		
 		<p id="rosenfeld">Rosenfeld, L., & Morville, P. (2002). Information architecture for the world wide web. O'Reilly Media, Inc.</p>		
 
+		<p id="woodruff">Woodruff, A., Fox, S.E., Rousso-Schindler, S., and Warshaw, J (2018). <a href="https://doi.org/10.1145/3173574.3174230">A qualitative exploration of perceptions of algorithmic fairness</a>. ACM Conference on Human Factors in Computing Systems (CHI).</p>
+		
 		<script type="text/javascript">
 		
 			var _gaq = _gaq || [];
