--- a/mediation.html
+++ b/mediation.html
@@ -170,15 +170,15 @@
 		
 		<p id="abdul">Abdul, A., Vermeulen, J., Wang, D., Lim, B.Y., and Kankanhalli, M. (2018). <a href="https://doi.org/10.1145/3173574.3174156">Trends and trajectories for explainable, accountable, and intelligible systems: an HCI research agenda</a>. ACM Conference on Human Factors in Computing Systems (CHI).</p>
 		
-		<p id="cho">Cho, D., & Kwon, K. H. (2015). The impacts of identity verification and disclosure of social cues on flaming in online user comments. Computers in Human Behavior, 51, 363-372.</p>
+		<p id="cho">Cho, D., & Kwon, K. H. (2015). <a href="https://doi.org/10.1016/j.chb.2015.04.046">The impacts of identity verification and disclosure of social cues on flaming in online user comments</a>. Computers in Human Behavior, 51, 363-372.</p>
 
-		<p id="erickson">Erickson, T., & Kellogg, W. A. (2000). Social translucence: an approach to designing systems that support social processes. ACM transactions on computer-human interaction (TOCHI), 7(1), 59-83.</p>
+		<p id="erickson">Erickson, T., & Kellogg, W. A. (2000). <a href="https://doi.org/10.1145/344949.345004">Social translucence: an approach to designing systems that support social processes. ACM transactions on computer-human interaction (TOCHI), 7(1), 59-83.</p>
 		
 		<p id="fussel">Fussell, S. R., & Setlock, L. D. (2014). Computer-mediated communication. Handbook of Language and Social Psychology. Oxford University Press, Oxford, UK, 471-490.</p>
 		        
 	        <p id="mcluhan">McLuhan, M. (1994). Understanding media: The extensions of man. MIT press.</p>
 
-		<p id="olson">Olson, G. M., & Olson, J. S. (2000). Distance matters. Human-computer interaction, 15(2), 139-178.</p>
+		<p id="olson">Olson, G. M., & Olson, J. S. (2000). <a href="https://doi.org/10.1207/S15327051HCI1523_4">Distance matters</a>. Human-computer interaction, 15(2), 139-178.</p>
 
 		<p id="rader">Rader, E., Cotter, K., and Cho, J (2018). <a href="https://doi.org/10.1145/3173574.3173677">Explanations as mechanisms for supporting algorithmic transparency</a>. ACM Conference on Human Factors in Computing Systems (CHI).</p>
 		
