--- a/mediation.html
+++ b/mediation.html
@@ -172,7 +172,7 @@
 		
 		<p id="cho">Cho, D., & Kwon, K. H. (2015). <a href="https://doi.org/10.1016/j.chb.2015.04.046">The impacts of identity verification and disclosure of social cues on flaming in online user comments</a>. Computers in Human Behavior, 51, 363-372.</p>
 
-		<p id="erickson">Erickson, T., & Kellogg, W. A. (2000). <a href="https://doi.org/10.1145/344949.345004">Social translucence: an approach to designing systems that support social processes. ACM transactions on computer-human interaction (TOCHI), 7(1), 59-83.</p>
+		<p id="erickson">Erickson, T., & Kellogg, W. A. (2000). <a href="https://doi.org/10.1145/344949.345004">Social translucence: an approach to designing systems that support social processes</a>. ACM transactions on computer-human interaction (TOCHI), 7(1), 59-83.</p>
 		
 		<p id="fussel">Fussell, S. R., & Setlock, L. D. (2014). Computer-mediated communication. Handbook of Language and Social Psychology. Oxford University Press, Oxford, UK, 471-490.</p>
 		        
