Added mediation image, fixing #19.

--- a/mediation.html
+++ b/mediation.html
@@ -45,6 +45,10 @@
 		</p>
 
 		<p>
+			<img src="images/mediation.png" class="img-responsive" alt="A person trying to reach a function, some data, and a person through a window" />
+		</p>
+		
+		<p>
 			In this chapter, we will discuss how user interfaces mediate access to three things: automation, information, and other humans.
 		</p>
 
