Fixed #57, citing Britch on home automation.

--- a/declarative.html
+++ b/declarative.html
@@ -141,6 +141,7 @@
 			Some systems have attempted to support more ambitious automation, empowering users to create entire applications that better support their personal information needs.
 			For example, many systems have combined spreadsheets with other simple scripting languages to enable users to write simple web applications with rich interfaces, using the spreadsheet as a database (<a href="#chang">Chang and Myers 2014</a>, <a href="#benson">Benson et al. 2014</a>).
 			Other systems like Mavo above and Dido have encapsulated the entire application writing process to just editing HTML by treating HTML as a specification for both the layout of a page and the layout of data (<a href="#verou">Verou et al. 2016</a>, <a href="karger">Karger et al. 2009</a>).
+			An increasing number of systems have explored home automation domains, finding clear tradeoffs between simplicity and expressiveness in rule-based programs (<a href="#brich">Britch 2017</a>).
 		</p>
 
 		<p>
@@ -186,6 +187,8 @@
 
 		<p id="benson">Edward Benson, Amy X. Zhang, and David R. Karger. 2014. <a href="https://doi.org/10.1145/2642918.2647387">Spreadsheet driven web applications</a>. In Proceedings of the 27th annual ACM symposium on User interface software and technology (UIST '14). ACM, New York, NY, USA, 97-106.</p>
 
+		<p id="brich">Julia Brich, Marcel Walch, Michael Rietzler, Michael Weber, and Florian Schaub. 2017. <a href="https://doi.org/10.1145/3057858">Exploring End User Programming Needs in Home Automation</a>. ACM Trans. Comput.-Hum. Interact. 24, 2, Article 11 (April 2017), 35 pages.</p>
+		
 		<p id="burg">Brian Burg, Andrew J. Ko, and Michael D. Ernst. 2015. <a href="https://doi.org/10.1145/2807442.2807473">Explaining Visual Changes in Web Interfaces</a>. In Proceedings of the 28th Annual ACM Symposium on User Interface Software & Technology (UIST '15). ACM, New York, NY, USA, 259-268.</p>
 
 		<p id="chang">Kerry Shih-Ping Chang and Brad A. Myers. 2014. <a href="https://doi.org/10.1145/2642918.2647371">Creating interactive web data applications with spreadsheets</a>. In Proceedings of the 27th annual ACM symposium on User interface software and technology (UIST '14). ACM, New York, NY, USA, 87-96.</p>
