--- a/declarative.html
+++ b/declarative.html
@@ -89,7 +89,7 @@
 			Because programming interfaces are user interfaces, they also have <a href="theory.html">gulfs of evaluation and execution, and affordances and feedback that bridge them</a>.
 			Their gulfs are just much larger because of translation.
 			Because textual programs are parsed according to a formal grammar, there are numerous ways to violate the grammar, requiring a user to know the rules of the grammar to write correct programs.
-			Because the functional affordances in a programming language can be combined in infinite ways, there are an <em>infinite</em> number of programs can exist.
+			Because the functional affordances in a programming language can be combined in infinite ways, there are an <em>infinite</em> number of programs that can exist.
 			How can one figure out which program will achieve a user's goal?
 			Code examples, documentation, Stack Overflow, design patterns, software architecture skills, and other media are key to bridging this gulf.
 			Similarly, because programs can execute hundreds, thousands, even billions of instructions per second, and even simple programs can execute in a multitude of different ways depending on the input they receive, there's a really big space of possible program outputs that a user might need to understand.
